force-app/main/default/objects/Employee_Profile__c/Employee_Profile__c.object-meta.xml
<CustomObject>
    <label>Employee Profile</label>
    <nameField>
        <label>Employee Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>