force-app/main/default/objects/Employee_Profile__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employee Profiles</relationshipLabel>
    <relationshipName>Employee_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>