force-app/main/default/objects/Employee_Profile__c/fields/Employee_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_Profile_ID__c</fullName>
    <displayFormat>EMPLOYEE - {00000}</displayFormat>
    <label>Employee Profile ID</label>
    <type>AutoNumber</type>
</CustomField>