force-app/main/default/objects/Employee_Profile__c/fields/Initial_Application__c.field-meta.xml
<CustomField>
    <fullName>Initial_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Employee Profiles</relationshipLabel>
    <relationshipName>Employee_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>